# CourseRegistrationHelper

./: README.md
CRHelper/: CMakeLists.txt
CRHelper/CRHelper/: CMakeLists.txt  CRApplication.cpp  CRApplication.h  FileLoader.cpp  FileLoader.h  Main.cpp  Utils.h
